Correct horizontal spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -73,8 +73,8 @@ form{
   position: relative;
   width: 10px;
   height: 14px;
-  margin-left: -25px;
-  margin-right: 10px;
+  margin-left: -20px;
+  margin-right: 5px;
   opacity: 0;
 }
 
